<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="secilenBesin"
            type="com.tetamatrix.besinlerkitabi.model.Besin" />

    </data>
    <!--Constraint Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.BesinDetayFragment">

        <!--ImageView -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:downloadImage="@{secilenBesin.gorsel}"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--LineerLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
            <!--TextViews -->
            <TextView
                android:id="@+id/besinIsimtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{secilenBesin.isim}"
                android:hint="@string/besidetayisim"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/besinKaloritxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/besidetaykalori"
                android:text="@{secilenBesin.kalori}"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/besinKarbonHidrartxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/besidetaykarbonhidrad"
                android:text="@{secilenBesin.karbonhidrad}"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/besinProteintxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/besidetayprotein"
                android:layout_marginTop="10dp"
                android:text="@{secilenBesin.protein}"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/besinYagtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/besidetayyag"
                android:text="@{secilenBesin.yag}"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>